5/17/11 add parallel circuits
5/17/11 populate series circuit with capacitors
5/17/11 first pass at Series circuits (not populated with capacitors yet)
5/17/11 create NullCircuit and NullCircuitNode, placeholders for circuits that haven't been implemented yet
5/17/11 create base class for circuit nodes, AbstractCircuitNode
5/17/11 move lots of stuff to AbstractCircuit
5/17/11 add ICircuit.getCapacitors, create skeleton of SeriesCircuit, identify things to move to AbstractCircuit
5/17/11 move battery and listeners to AbstractCircuit
5/17/11 create SingleCircuitNode, add factory method for creating circuit nodes
5/17/11 rename BatteryCapacitorCircuit to SingleCircuit
5/17/11 attach charge and E-field visibility properties to control panel
5/17/11 fix EFieldNode.getLineSpacing for effectiveEField=0
5/17/11 consolidate model constants in MultipleCapacitorsModel for now
5/17/11 add capacitance control (reuse plate charge slider and bar meter value display)
5/16/11 reuse BatteryCapacitorCircuit as "single" circuit in Multi Capacitors tab, display battery and capacitor (no wires or capacitance control yet)
5/16/11 move creation of battery and capacitor into BatteryCapacitorCircuit, so that this can be our "single capacitor" circuit
5/16/11 add Capacitor.setCapacitance, which calculates and sets plate separation
5/16/11 redesign IntroductionModule: extending DielectricModule was confusing, so just reuse stuff from DielectricModule
5/16/11 add Air as a dielectric material
5/16/11 delete surface charge density (sigma) from the model implementation, it is shown in the design doc but not used in the model
5/16/11 Remove several setters from ICircuit, since these are specific to a capacitor whose geometry can be directly manipulated
5/16/11 factored out ICapacitor, common interface for all capacitor model elements
5/16/11 SimpleCapacitor, a simplified capacitor model for use in Multiple Capacitors tab
# 1.00.04 (51951) May 16, 2011